test/spec_vectors/memory/fail/module_20.wat
(module (memory 65537))